--- a/ClientApp/src/app/components/footer/footer.component.html
+++ b/ClientApp/src/app/components/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+<footer class="container">
+    <div class="top-row">
+        <img class="app-logo" src="../images/logo-long2.png" alt="app-logo">
+        <a routerLink="/partner" routerLinkActive="active">Find Events/Artists/Venues</a>
+    </div>
+  
+    <div class="contact-info">
+        Contact: <a href="mailto:T.J.Seery-21@outlook.com">T.J.Seery-21&#64;student.lboro.ac.uk
+        </a>
+    </div>
+  
+    <div class="bottom-link">
+      <a routerLink="/" routerLinkActive="active">Back to home page</a>
+    </div>
+</footer>
+  
