--- a/ClientApp/src/app/components/artist-summary/artist-summary.component.html
+++ b/ClientApp/src/app/components/artist-summary/artist-summary.component.html
@@ -1,15 +1,22 @@
 
-<div class="container">
-    <app-image [src]="artist.imageUrl" [alt]="'Artist Image'" />
-    <div class="info">
-    <h2>{{ artist.name }}</h2>
-    <p class="icon-text"><mat-icon>music_note</mat-icon>
-        <span *ngFor="let genre of artist.genres; let i = index">
-        {{ genre.name }} {{ i < artist.genres.length - 1 ? ', ' : '' }}
-        </span>
-    </p>
-    <p class="icon-text"><mat-icon>location_on</mat-icon> {{ artist.county }}</p>
-    <button class="primary" (click)="onDetailsClick()">View Details</button>
+<app-card >
+    <div class="container">
+        <img 
+            [src]="blobService.getUrl(artist?.imageUrl)" 
+            [alt]="'Artist Image'"
+            width="170"
+            height="170" />
+        <div class="info">
+        <h2>{{ artist?.name }}</h2>
+        <p class="icon-text"><mat-icon>music_note</mat-icon>
+            <span *ngFor="let genre of artist?.genres; let i = index">
+                {{ genre.name }}{{ i < (artist?.genres?.length || 0) - 1 ? ', ' : '' }}
+              </span>          
+        </p>
+        <p class="icon-text"><mat-icon>location_on</mat-icon> {{ artist?.county }}</p>
+        <button color="primary" class="mt-2" mat-fab extended (click)="onViewDetails()">
+            <mat-icon fontIcon="visibility"></mat-icon>View details
+        </button>
+        </div>
     </div>
-</div>
-
+</app-card>
