--- a/ClientApp/src/app/components/config/heading-large/heading-large.component.html
+++ b/ClientApp/src/app/components/config/heading-large/heading-large.component.html
@@ -1,5 +1,5 @@
 @if(editMode) {
-    <app-input [(content)]="content" label="Name"></app-input>
+    <app-input [(content)]="content" label="Name" [whiteOutline]="whiteOutline"></app-input>
 }@else {
     <h1>{{ content }}</h1>
 }
