--- a/ClientApp/src/app/components/search-results/search-results.component.scss
+++ b/ClientApp/src/app/components/search-results/search-results.component.scss
@@ -1,6 +1,7 @@
 .container {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 2rem;
-  }
-  
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 2rem;
+  height: 100%;
+  min-height: 60vh;
+}
