--- a/ClientApp/src/app/components/search/search.component.html
+++ b/ClientApp/src/app/components/search/search.component.html
@@ -1,4 +1,7 @@
 
+  <div class="test">
+    
+  </div>
   <div class="container">
     <div class="wrapper">
       <!-- Location Search Component -->
