--- a/ClientApp/src/app/components/sidebar/sidebar.component.scss
+++ b/ClientApp/src/app/components/sidebar/sidebar.component.scss
@@ -17,12 +17,9 @@ mat-sidenav {
 .btn-toggle {
     position: absolute;
     top: 10px;
-    right: 10px; /* Aligns button to the right */
-    
+    right: 10px; 
     background: white;
-    border-radius: 50%;
-    padding: 10px;
+    padding: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
