--- a/ClientApp/src/app/shared/layouts/auth-layout/auth-layout.component.html
+++ b/ClientApp/src/app/shared/layouts/auth-layout/auth-layout.component.html
@@ -1,9 +1,6 @@
-<div class="auth-container">
+<div class="container">
     <div class="form-section">
       <ng-content></ng-content>
-    </div>
-    <div class="image-section">
-        <img [src]="imageSrc" alt="Image" />
     </div>
 </div>
   
