--- a/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -3,14 +3,13 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
     padding: 16px;
-    height: 100%;
+    height: 100vh;
 
     > :host ::ng-deep [section-one],
     :host ::ng-deep [section-two],
     :host ::ng-deep [section-three],
     :host ::ng-deep [section-four] {
         border: 2px solid #ccc;
-        min-width: 200px;
         padding: 16px;
         border-radius: 8px;
         background-color: #f9f9f9;
