--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -4,6 +4,7 @@
         [editMode]="editMode" 
         (contentChange)="onChangeDetected()"
         (latLongChange)="updateLatLong($event)"
+        (imageChange)="onImageChange($event)"
         />
     <app-scrollspy [navItems]="navItems"></app-scrollspy>
         <div class="container" *ngIf="entity">
