Some fixes: - Fixed Error interceptor to conditionally return errors under a skip condition - Cant accept listing application unless you own that listing

--- a/ClientApp/src/app/components/header/header.component.html
+++ b/ClientApp/src/app/components/header/header.component.html
@@ -1,7 +1,9 @@
 <div class="container" (click)="onClick()">
     <h3>
         {{ header?.name }}
-        <ng-container *ngIf="header?.rating"><mat-icon class="star-icon">star</mat-icon> {{ header?.rating }}</ng-container>
+        <ng-container *ngIf="header?.rating">
+            <mat-icon class="star-icon">star</mat-icon>{{ header?.rating }}
+        </ng-container>
     </h3>
     <img 
         [src]="blobStorageService.getUrl(header?.imageUrl)" 
