--- a/ClientApp/src/app/components/my-preference/my-preference.component.html
+++ b/ClientApp/src/app/components/my-preference/my-preference.component.html
@@ -1,6 +1,6 @@
 @if(preference){
-    <app-config-navbar (editModeChange)="onEditModeChange($event)" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
-    <app-preference-details [preference]="preference" [editMode]="editMode" (entityChange)="onEntityChange($event)"></app-preference-details>
+    <app-config-navbar [(editMode)]="editMode" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
+    <app-preference-details [preference]="preference" [editMode]="editMode" (itemChange)="onItemChange()"></app-preference-details>
 }@else{
     <app-config-item-not-found [itemName]="'preference'"/>
 }
