--- a/ClientApp/src/app/pages/login/login.component.html
+++ b/ClientApp/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
-<app-auth-layout [imageSrc]="'assets/images/register.jpg'">
+<app-auth-layout [imageSrc]="'assets/images/register.jpg'" [title]="title">
   <div class="container">
     <h1 class="title">Login</h1>
-    <form (ngSubmit)="login()">
+    <form (ngSubmit)="onLogin()" #form="ngForm">
       <div class="form-container">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" [(ngModel)]="credentials.email" required>
@@ -9,8 +9,14 @@
       <div class="form-container">
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" [(ngModel)]="credentials.password" required>
+        <a href="#" (click)="onForgotPassword($event)" class="text-[var(--secondary-color)] mt-2">
+          Forgot password?
+        </a>        
       </div>
-      <button mat-flat-button type="submit" class="submit">Submit</button>
+      <button mat-flat-button type="submit" class="submit" [disabled]="form.invalid">Submit</button>
+      <p class="mt-2">
+        No Account? <a routerLink="/register" class="text-[var(--secondary-color)]">Register</a> 
+      </p> 
     </form>
   </div>
 </app-auth-layout>
