--- a/ClientApp/src/app/pages/my-profile/my-profile.component.html
+++ b/ClientApp/src/app/pages/my-profile/my-profile.component.html
@@ -1,2 +1,2 @@
-<app-config-navbar (editModeChange)="onEditModeChange($event)" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
-<app-profile-details [user]="user"></app-profile-details>
+<app-config-navbar [(editMode)]="editMode" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
+<app-profile-details [editMode]="editMode" [(user)]="user" (itemChange)="onItemChange()"></app-profile-details>
