--- a/ClientApp/src/app/pages/profile-menu/profile-menu.component.html
+++ b/ClientApp/src/app/pages/profile-menu/profile-menu.component.html
@@ -1,22 +1,26 @@
 <mat-drawer-container class="container">
     <mat-drawer mode="side" opened class="sidebar">
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>Profile</mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="details" routerLinkActive="active">Profile Details</a>
-                    <a mat-list-item routerLink="preferences" routerLinkActive="active">Preferences</a>
-                    <a mat-list-item routerLink="payment" routerLinkActive="active">Payment</a>
-                </mat-nav-list>
-            </mat-expansion-panel>
-            <mat-expansion-panel *ngIf="authService.isRole('Customer')">
-                <mat-expansion-panel-header>Tickets</mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="tickets/upcoming" routerLinkActive="active">Upcoming Tickets</a>
-                    <a mat-list-item routerLink="tickets/history" routerLinkActive="active">Ticket History</a>
-                </mat-nav-list>
-            </mat-expansion-panel> 
+      <div class="flex flex-col space-y-4">
+  
+        <mat-nav-list>
+          <a mat-list-item routerLink="my" routerLinkActive="active">Profile Details</a>
+          <a mat-list-item routerLink="preferences" routerLinkActive="active">Preferences</a>
+          <a *ngIf="authService.isNotRole('Customer')" mat-list-item routerLink="payment" routerLinkActive="active">Payment</a>
+        </mat-nav-list>
+  
+        <mat-expansion-panel *ngIf="authService.isRole('Customer')">
+          <mat-expansion-panel-header>Tickets</mat-expansion-panel-header>
+          <mat-nav-list>
+            <a mat-list-item routerLink="tickets/upcoming" routerLinkActive="active">Upcoming Tickets</a>
+            <a mat-list-item routerLink="tickets/history" routerLinkActive="active">Ticket History</a>
+          </mat-nav-list>
+        </mat-expansion-panel>
+  
+      </div>
     </mat-drawer>
+  
     <mat-drawer-content class="main-content">
-        <router-outlet></router-outlet>
+      <router-outlet></router-outlet>
     </mat-drawer-content>
-</mat-drawer-container>
+  </mat-drawer-container>
+  
