--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -7,7 +7,7 @@
         (imageChange)="onImageChange($event)"
         />
     <app-scrollspy [navItems]="navItems"></app-scrollspy>
-        <div class="container" *ngIf="entity">
+        <div class="container" *ngIf="venue">
             <section [id]="navItems[0].fragment">
                 <h1>{{navItems[0].name}}</h1>
                     <app-textarea [editMode]="editMode" label="About" [(content)]="venue.about" (contentChange)="onChangeDetected()"/>
