--- a/ClientApp/src/app/shared/layouts/auth-layout/auth-layout.component.html
+++ b/ClientApp/src/app/shared/layouts/auth-layout/auth-layout.component.html
@@ -1,3 +1,5 @@
+<app-hero [title]="title" [titleStyle]="titleStyle"></app-hero>
+<app-breadcrumb></app-breadcrumb>
 <div class="container">
     <div class="form-section">
       <ng-content></ng-content>
