--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -1,6 +1,6 @@
 @if(venue) {
     <app-venue-details-hero 
-        [venue]="venue" 
+        ([venue])="venue" 
         [editMode]="editMode" 
         (contentChange)="onChangeDetected()"
         (latLongChange)="updateLatLong($event)"
