--- a/ClientApp/src/app/pages/my-event/my-event.component.html
+++ b/ClientApp/src/app/pages/my-event/my-event.component.html
@@ -1,6 +1,6 @@
 @if (event) {
-    <app-config-navbar (editModeChange)="onEditModeChange($event)" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
-    <app-event-details *ngIf="event" [event]="event" [editMode]="editMode" (itemChange)="onItemChange()"></app-event-details>
+    <app-config-navbar [(editMode)]="editMode" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
+    <app-event-details *ngIf="event" [(event)]="event" [editMode]="editMode" (eventChange)="onItemChange()"></app-event-details>
 } @else {
     Not Found
 }
